Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -131,11 +131,11 @@
 
 
 \begin{abstract}
-Although simulation models of socio-spatial systems in general and agent-based models in particular represent a fantastic opportunity to explore socio-spatial behaviours and to test a variety of scenarios for public policy, the validity of generative models is uncertain unless their results are proven robust and representative of 'real-world' conditions. Sensitivity analysis usually includes the analysis of the effect of stochasticity on the variability of results, as well as the effects of small parameter changes. However, initial spatial conditions are usually not modified systematically in socio-spatial models, thus leaving unexplored the effect of initial spatial arrangements on the interactions of agents with one another as well as with their environment. In this paper, we present a method to assess the effect of some initial spatial conditions on simulation models, using a systematic geometric structures generator in order to create density grids with which socio-spatial simulation models are initialised. We show, with the example of two classical agent-based models (Schelling's models of segregation and Sugarscape's model of unequal societies) and a straightforward open-source work-flow using high performance computing, that the effect of initial spatial arrangements is significant on the two models. We wish to illustrate the potential  add spatial sensitivity analysis during the exploration of their model and that specialist of thethematics would see the opportunity to dig deeper into our results?%Furthermore, this effect is sometimes larger than the effect of parameters' value change.%Comment FL : j'ai supprimé cette dernière phrase qui ne me semblait pas essentielle et rajouté à la place une phrase d'ouverture de Marion.
+Although simulation models of socio-spatial systems in general and agent-based models in particular represent a fantastic opportunity to explore socio-spatial behaviours and to test a variety of scenarios for public policy, the validity of generative models is uncertain unless their results are proven robust and representative of 'real-world' conditions. Sensitivity analysis usually includes the analysis of the effect of stochasticity on the variability of results, as well as the effects of small parameter changes. However, initial spatial conditions are usually not modified systematically in socio-spatial models, thus leaving unexplored the effect of initial spatial arrangements on the interactions of agents with one another as well as with their environment. In this paper, we present a method to assess the effect of some initial spatial conditions on simulation models, using a systematic geometric structures generator in order to create density grids with which socio-spatial simulation models are initialised. We show, with the example of two classical agent-based models (Schelling's models of segregation and Sugarscape's model of unequal societies) and a straightforward open-source work-flow using high performance computing, that the effect of initial spatial arrangements is significant on the two models. We wish to illustrate the potential interest of adding spatial sensitivity analysis during the exploration of models for both modellers and thematic specialists.%Furthermore, this effect is sometimes larger than the effect of parameters' value change.%Comment FL : j'ai supprimé cette dernière phrase qui ne me semblait pas essentielle et rajouté à la place une phrase d'ouverture de Marion.
 \end{abstract}
 
 \begin{keywords}
-Space, Initial conditions, Sensitivity, ABM
+Space, Initial conditions, Sensitivity, Agent-Based Models
 \end{keywords}
 
 
@@ -399,14 +399,6 @@ In table \ref{tab:regressionSchelling}, we see that the type of density grid wit
 \subsubsection{Sugarscape}
 
 We now check the sensitivity in terms of qualitative behavior of phase diagrams. We show the phase diagrams for two very opposite morphologies in terms of sprawling, but controlling for aggregation with the same $PC2$ value. These correspond to the green and blue frames in Fig.~\ref{fig:sugarscape-distance-pca}. In terms of grid shape, we observe that the difference between the two grids is mainly on average distance and entropy: in a nutshell, the first grid is much more dispersed and disorganised than the second. Although the behaviours are rather stable for varying $s_+$, the initial maximum endowment in sugar, which means that the poorest agents have a determinant role in trajectories, the two examples have not only a very distant baseline inequality (the ceiling of the first 0.35 is roughly the floor of the second 0.3), but their qualitative behavior is also radically opposite: the sprawled configuration gives inequalities decreasing as population decreases and decreasing as minimal wealth increases, whereas the concentrated one gives inequalities strongly increasing as population decreases and also decreasing with minimal weights but significantly only for large population values (fig. \ref{fig:sugarscape-phasediagrams}. In sprawled spaces, inequalities are thus fostered by a lack of minimal local resources, whereas population will drive inequality in concentrated spaces. The process is thus completely reversed depending on the grid chosen to run the model on, which would have significant impacts if one tried to deduce policy from this model.
-%This second example confirms thus the importance of sensitivity of simulation models to the initial spatial conditions.
-
-
-% phase diagrams -> ok well different qualitatively
-%          spAlpha spDiffsteps spDiffusion spGrowth spPopulation
-% id=27 : 0.7913103    2.376837   0.1440293 157.4147 4852.746
-% id=0 : 2.562398    3.753032   0.1316788 128.4632 4753.983
-% maxSugar = 110
 
 
 %%%%%%%%%%%%%
@@ -460,7 +452,7 @@ Another way to go would be to implement additional generators, such as social ne
 
 As~\citet{pumain2003approche} points out in an overview of complexity approaches in geography, transfer of models and concepts between disciplines may induce a transfer of corresponding assumptions. Geography and the social sciences in general have been strongly influenced by physics in the last decades, that beside their highly enriching impact~\citep{o2015physicists}, may have softly imposed strong assumptions such as homogeneity and isotropy of space in basic models. We believe that a renewed approach on the role of space as we proposed, in other terms insisting that \emph{space matters}, is an opportunity the for social sciences to build their own stream of methodologies in the modelling domain.
 
-This relates to relations between empirical, conceptual and modeling dimensions of quantitative research in social sciences, as coined by \cite{livet2010ontology}. % TODO finish
+This relates to relations between empirical, conceptual and modeling dimensions of quantitative research in social sciences, as coined by \cite{livet2010ontology}. In our case, a contribution in the modeling domain aiming at extracting further knowledge on model behavior (sensitivity to geometrical context), naturally leads to questioning theoretical concepts and empirical definition on which the model was based, such as for example the meaning of neighborhood.
 % to inform the interactions between empirics, concepts and models as discussed by Livet et al., 2010, we added a paragraph in conclusion, discussing how our approach allows to go back to questioning empirical cases from the model and questioning our concepts (for example how ’neighbourhood’ is modelled since Schelling compared to the meaning of neighbourhood in empirical/theoretical social sciences)
 
 
