--- a/Response_to_Reviewers.tex
+++ b/Response_to_Reviewers.tex
@@ -82,7 +82,7 @@ A. In terms of the ambiguity between the social and spatial component
 \item A.2. We have clarified the terms used in our paper introduction to distinguish between: \textbf{sociospatial systems} (i.e. groups of social agents whose behaviour is constrained by their position in geographical space)%. This term refers to empirical systems, which are the targets of the modelling process)% Mise en commentaire par FL 190812 : je trouve que cela alourdi inutilement la phrase
 , \textbf{interactions} (what happens between agents and between agents and their environment, in the model as well as in the empirical system) and \textbf{geometric structure}, a term we use for qualifying the geometric outputs of the spatial generator which are used as initial spatial conditions in the model. When we talk about the generator we actually used in the paper, we call it a "density grid generator" because it generates a square grid with heterogeneous density, whereas in all generality a "spatial generator" could potentially generate graph or point structures. %\comment[CC]{done in 1.5} %Changement par FL 190812 Because this is the only geometric structure it generates
 
- \item A.3. We have modified figure 1 to express the clarified approach visually. Naming the generator parameter "gamma" has helped reduced the confusion that the term 'meta-parameter' was inducing. We have also replaced the expressions "quantitative results" by "sensitivity analysis" and "qualitative results" by "variations by types of geometric structure", in the figure as in the subsections of the paper. %\comment[CC]{done}
+ \item A.3. We have modified figure 1 to express the clarified approach visually. Naming the generator parameter "gamma" has helped reduced the confusion that the term 'meta-parameter' was inducing. We have also replaced the expressions "quantitative results" by "sensitivity analysis" and "qualitative results" by "variations by types of geometric structure", in the figure as in the subsections of the paper.
 \end{itemize}
 
  \medskip
@@ -92,7 +92,7 @@ B. To highlight limitations as well as promising perspectives of improvement, we
  
   \item B.1. We have added a discussion of\comment[FL]{on?} how segregation indicators can themselves be linked with geometric structure (which can typically happens if an indicator give the same weight to cells of different densities). This is a limitation of the method as it is but also an avenue for promoting stronger indicators in empirical research. % \comment[MLT]{j'ai formulé un paragraphe court sur ce point en discussion, en lien avec le point B.3}
   
-  \item B.2. To inform the interactions between empirics, concepts and models as discussed by Livet et al., 2010, We added a paragraph in discussion, explaining how our approach allows us to go back to questioning empirical cases from the model and questioning our concepts (for example how 'neighbourhood' is modelled since Schelling compared to the meaning of neighbourhood in empirical/theoretical social sciences). \comment{il faut reprendre ces elements dans l'article}
+  \item B.2. To inform the interactions between empirics, concepts and models as discussed by Livet et al., 2010, we added a paragraph in discussion, explaining how our approach allows us to go back to questioning empirical cases from the model and questioning our concepts (for example how 'neighbourhood' is modelled since Schelling compared to the meaning of neighbourhood in empirical/theoretical social sciences). \comment{il faut reprendre ces elements dans l'article}
   
   \item B.3. As a perspective to reduce this bias, we could compute ego-neighbourhoods rather than a regular grid (another paper)\comment[FL]{pas clair : pour calculer les indicateurs? pour les interactions? à préciser comment sont utilisés ces ego neighborhoods}. We could also\comment[FL]{plutôt : In further researches, we plan to extend the analysis...} in another paper vary the size of grid and its cell shape (cf. MAUP), but also generate other types of geometric structures to feed into geosimulation models (for example points or networks). % \comment{j'ai formulé un paragraphe court sur ce point en discussion, en lien avec le point B.1}
 \end{itemize}
