Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -161,11 +161,12 @@ Space, Initial conditions, Sensitivity, Agent-Based Models
 \section{Introduction}
 %%%%%%%%%%%%%%%%%%%%%%
 
-Computer simulation has been recognised and is increasingly used by geographers as an efficient tool to explore geographical processes, hypotheses and predictive scenarios within virtual laboratories \citep{batty1971modelling, batty2007model, carley1999generating, Quesneletal2009}. It has been identified as an emerging field and coined under the term geosimulation by \cite{benenson2004geosimulation}. Simulation also appears as a way to overcome the difficult analytic resolution of many socio-spatial models which were developed in the past, as well as to explore the possible (alternative) trajectories of path-dependent social and ecological systems. The specificity of geographical models compared to other social science models is that space and spatial interactions are given a prime role, geographers being driven by an explicit interest in studying the way space influences the outcomes of social processes modelled. We think that simulation approaches are uniquely positioned to represent the complexity of socio-spatial interactions, provided that models include relevant spatial descriptions and behavioural rules which take space into account, and provided that the model evaluation includes a sensitivity analysis of the model outputs to the way space is represented. Unfortunately, the first condition is not always met, and the second is seldom even mentioned. This paper aims to fill a methodological and conceptual gap, which is a systematic testing of the sensitivity of a model's outcomes to its initial spatial conditions. To demonstrate the genericity of our approach, we develop two applications with classic simulation models commonly used as case studies for comparing and aligning simulation models \citep{Axtelletal1996, wilensky2007making}: \citet{schelling1971dynamic}'s model of segregation and \citet{EpsteinAxtell1996}'s Sugarscape model.\\
+Computer simulation has been recognised and is increasingly used by geographers as an efficient tool to explore geographical processes, hypotheses and predictive scenarios within virtual laboratories \citep{batty1971modelling, batty2007model, carley1999generating, Quesneletal2009}. It has been identified as an emerging field and coined under the term geosimulation by \cite{benenson2004geosimulation}. Simulation also appears as a way to overcome the difficult analytic resolution of many socio-spatial models which were developed in the past, as well as to explore the possible (alternative) trajectories of path-dependent social and ecological systems. The specificity of geographical models compared to other social science models is that space and spatial interactions are given a prime role, geographers being driven by an explicit interest in studying the way "space" in broad sense influences the outcomes of social processes modelled. We think that simulation approaches are uniquely positioned to represent the complexity of socio-spatial interactions, provided that models include relevant spatial descriptions and behavioural rules which take space into account, and provided that the model evaluation includes a sensitivity analysis of the model outputs to the way space is represented. Unfortunately, the first condition is not always met, and the second is seldom even mentioned. This paper aims to fill a methodological and conceptual gap, which is a systematic testing of the sensitivity of a model's outcomes to its initial spatial conditions. \comment[FL]{il faut ici citer des approches du même type}. To demonstrate the genericity of our approach, we develop two applications with classic simulation models commonly used as case studies for comparing and aligning simulation models \citep{Axtelletal1996, wilensky2007making}: \citet{schelling1971dynamic}'s model of segregation and \citet{EpsteinAxtell1996}'s Sugarscape model.\\
 
 \subsection{Definition of the problem}
-
-Socio-spatial systems can be crudely described as social agents interacting with one another, within a limited portion of space. Social agents thus constitute the microscopic level of the system, and they are framed by a system-time that evolves irreversibly, creating temporal and cumulative effects, also known as path-dependency \citep{arthur1994increasing}. Therefore, observing a system at different points in time does not equate to observing different systems at a single point in time. This general property of ergodicity applies to geographical elements such as road networks or built-up areas \citep{pumain2003approche}. Similarly to what \citet{gell1995quark} calls \emph{frozen accidents} in complex systems generally, a given configuration contains clues about past bifurcations, that can have had dramatic effects on the state of the system. Therefore, strong spatio-temporal path-dependencies in the trajectory of individual territories and changing social environments over time prohibits the use of ergodic models. Ironically, these very models tend to be the models most frequently used in geosimulation.
+%change1 : within a limited portion of space
+%change2 : irreversibly, creating temporal and 
+Socio-spatial systems can be crudely described as social agents interacting with one another via the geometric structure of space \comment[FL]{change2}. Social agents thus constitute the microscopic level of the system, and they are framed by a system-time\comment[FL]{manque un mot} that evolves\comment[FL]{change2} with potential cumulative effects, also known as path-dependency \citep{arthur1994increasing}. Therefore, observing one system at different points in time does not equate to observing different systems at a single point in time. This general property of ergodicity applies to geographical elements such as road networks or built-up areas \citep{pumain2003approche}. Similarly to what \citet{gell1995quark} calls \emph{frozen accidents} in complex systems generally, a given configuration contains clues about past bifurcations, that can have had dramatic effects on the state of the system. Therefore, strong spatio-temporal path-dependencies in the trajectory of individual territories and changing social environments over time prohibits the use of ergodic models. Ironically, these very models tend to be the models most frequently used in geosimulation.\comment[FL]{on ne revient pas du tout là dessus à la fin : est ce que les cas d'étude qu'on mobilise sont si path dependant que ca? Si c'est pertinent : revenir dessus. Sinon, enlever cette phrase}
 
 
 Self-organization has been shown to be a central feature of socio-spatial systems in general and of cities in particular ~\citep{AllenSanglier1981,saint1989villes, Portugali2000}. In the vocabulary of complex systems, cities also exhibit emergent properties at macroscopic scales~\citep{pumain2006hierarchy, AzizAlaouiBertelle2009}, which can be simulated through microscopic interactions between agents~\citep{Wu2002, batty2007cities}. Complexity is partially due to bifurcations, which are determinant in socio-spatial systems~\citep{Wilson1981, Wilson2002}. Indeed, in spatially explicit simulation models, the non-linearity of local interactions is very likely to sublimate small perturbations in the initial spatial setting, making it difficult to interpret the resulting global structures. In that sense, the impact of initial \emph{spatial} settings on final outcomes is assumed to be significant just as any other initial conditions, but of more interest to the geographer. \\
@@ -183,7 +184,7 @@ In this paper, we aim to provide an operational framework for studying the influ
 \subsection{The effects of the space in simulation models}
 
 \subsubsection{Spatial processes}
-In 'real-life', different spatial configurations of people in a city tend to be associated with different distributions of income, carbon emissions, educational outcomes, etc. For example, \citet{wheeler2006urban} shows that, in the US, sprawling cities are more unequal than their compact counterparts with respect to income. Dynamically, sprawl in American cities consists in the addition of new developments which have been occupied by different groups of population, resulting in a concentration of the wealthy in suburban pockets and of pockets of poverty in the inner city area \citep{jargowsky2002sprawl}. Similarly, in terms of pollution for example, \citet[p.173]{schwanen2001travel} show that \textit{``deconcentration of urban land uses encourages driving and discourages the use of public transport as well as cycling and walking''}. These effects of geographical space on social systems correspond to processes to be included in geosimulation models.\\
+In 'real-life', different spatial configurations of people in a city tend to be associated with different distributions of income, carbon emissions, educational outcomes, etc. For example, \citet{wheeler2006urban} shows that, in the US, sprawling cities are more unequal than their compact counterparts with respect to income. Dynamically, sprawl in American cities consists in the addition of new developments which have been occupied by different groups of population, resulting in a concentration of the wealthy in suburban pockets and of pockets of poverty in the inner city area \citep{jargowsky2002sprawl}. Similarly, in terms of pollution for example, \citet[p.173]{schwanen2001travel} show that \textit{``deconcentration of urban land uses encourages driving and discourages the use of public transport as well as cycling and walking''}\comment[FL]{je ne comprends pas ce point : est-ce lié à un modèle de simulation?}. These effects of geographical space on social systems correspond to processes to be included in geosimulation models.\\
 
 \subsubsection{Spatial representation}
 A discussion of the effects of spatial encoding and representation has also been associated with the field of geostatistics since the exposure of the Modifiable Areal Unit Problem (MAUP) \citep{Openshaw1984, FotheringhamWong1991}. For example, \citet{Kwan2012} has argued for a careful examination of what she coins the 'uncertain geographic context problem' (UGCoP), i.e. of the spatial configuration of geographical units even when the size and delineation of the area are the same. Considerations of such issues in the geosimulation literature are rather scarce. However, there have been some noticeable attempts at analysing the impact of three types of initial spatial characteristics on model outcomes:
