--- a/Response_to_Reviewers.tex
+++ b/Response_to_Reviewers.tex
@@ -130,15 +130,14 @@ B. To highlight limitations as well as promising perspectives of improvement, we
   
    \item \textit{This also applies to the three segregation indexes: what exactly do they measure?}
   
-  $\rightarrow$ segregation indexes were better described in the section describing the models.
-  %\comment[CC]{done in section "case study models"}
+  $\rightarrow$ Segregation indexes were better described in the section describing the models.
   
   \medskip
   
   \item \textit{The description of the spatial generator’s procedure, outlined in paragraph 2.7, would also benefit if more information is added} \ldots
   %, for example, to delineate the terms “strength of attraction” (attraction in which respect?) and “strength of the diffusion process” (is strength equal to intensity? If so, is it then in space and/or time?). 
   
-  $\rightarrow$ \comment[JR]{will add more precision in the description of the generator}
+  $\rightarrow$ The description of the spatial generator was partly reformulated with more details.
 
   \medskip
 
@@ -158,7 +157,7 @@ B. To highlight limitations as well as promising perspectives of improvement, we
   %In so doing, the author(s) runs immediately into the problem of adequate definitions. In paragraph 1.2 the definition of geographical systems as “social agents interacting with one another, within a limited portion of space” is misleading. First, it is a tautology (geographical systems in space); secondly, geographical cannot be described with social agents, because geographical systems are composed of spatial units, their relations, and a spatially defined system border. Social systems, in turn, might be described with humans as elements, their relations, and again a socially defined system border. Moreover, with respect to sociological system theory (Luhmann 1993), space does not add any knowledge to the nature of social systems. This approach can be (and I would add: has to be) criticised, however, not by interming! ling fuzzily the social with the geographical, as happened with this definition. 
   %\item \comment[JR]{by spatial we indeed mean some kind of spatial container for agents right ? which is far from geographical in the sense he puts it indeed}\comment[MLT]{use sociospatial system instead? The term is broadly used in the literature to describe the interdependence between social phenomena and their spatial environment. We could also quote \hyperlink{https://journals.sagepub.com/doi/abs/10.1068/d9107}{Jessop et al. 2008}}
   
- $\rightarrow$ cf. comment A
+ $\rightarrow$ This issue is tackled by comment A.
  
  \medskip
 
@@ -176,7 +175,7 @@ B. To highlight limitations as well as promising perspectives of improvement, we
   \textit{The problem of setting space and geography as synonymous continues in paragraphs 1.9 and following. What is described here as "spatial system shape" is the geometry of spaces but not the geography of spaces.}
   % -> yes indeed
   
-  $\rightarrow$ see comment A. 
+  $\rightarrow$ We agree and corrected the semantics (see comment A). 
 
   \medskip
 
@@ -197,11 +196,12 @@ B. To highlight limitations as well as promising perspectives of improvement, we
   \medskip
  
  
-  \item \textit{The approach is reductionist and has its strength in reflecting growth at an abstract level nevertheless. The concluding remark in paragraph 5.1 “With the Schelling experiment, we found … that polycentric and discontinuous cities appear systematically more segregated than compact cities …” is elusive. Either it is a trivial fact, simply because polycentric cities have more centres and thus, by nature, more opportunities from which segregation can originate. Or, the results can be used as a starting point to dig deeper in geographical reasons, taking social, economic, cultural, and political, but also topographical issues into consideration. This geographical reasoning, however, is outside of the scope of this paper. }\comment[FL]{j'ai pas compris pourquoi la phrase du reviewer avait été mise en commentaire, j'ai remis}
- \comment[JR]{I rather agree that it is quite reductionist, and that the discussion may be valid only at very abstract levels (on which we were not explicit maybe ?) - maybe make these conclusions more moderate} \comment[MLT]{I kind of disagree with the idea that it is straightforward that centralised cities produce more segregation as it is not a direct parameter of the model but an output. Plus: what argument would he or she have to state that a big center would be automatically less segregated that several smaller ones? And I believe that explaining why polycentric cities are more segregated than others is out of the scope of the paper. But we could add his or her comment in the discussion section, saying that we hove we have convinced people to add spatial sensitivity analysis during the exploration of their model and that specialist of the thematics would see the opportunity to dig deeper into our results?} \comment[FK]{du coup je fais une proposition de réponse ci-dessous en reprenant ces différents éléments}
-  We understand this statements, however we wish to underline that our objective in the discussion of the Schelling results was not to establish a general result on the links between polycentricity and segregation, which are indeed very complex and multidimensional as advocated by the reviewer. Instead, we wished to show what kind of results can be obtained using the framework we suggest. If we do not prove that in general, and in empirical context, polycentricity creates more segregation, we obtained, in the modelling context, under Schelling assumptions, that polycentric geometric structures are more often that not associated with segregated patterns, a result which we do not believe to be solely resulting from the fact that more centers leads to more opportunities of segregation (which is true), because it seems also true that monocentric structures, with higher densities, can more easily accommodate heterogeneity of agents within cells, and hence a more patchy type of segregation which can for instance being observed in London. We included a comment in the discussion section, saying that we hope we have convinced people to add spatial sensitivity analysis during the exploration of their model and that specialist of the thematics would see the opportunity to dig deeper into our results? \comment[FL]{à la relecture de l'article s'assurer que cette prise de recul est bien explicitée}
+  \item \textit{The approach is reductionist and has its strength in reflecting growth at an abstract level nevertheless. The concluding remark in paragraph 5.1 “With the Schelling experiment, we found … that polycentric and discontinuous cities appear systematically more segregated than compact cities …” is elusive. Either it is a trivial fact, simply because polycentric cities have more centres and thus, by nature, more opportunities from which segregation can originate. Or, the results can be used as a starting point to dig deeper in geographical reasons, taking social, economic, cultural, and political, but also topographical issues into consideration. This geographical reasoning, however, is outside of the scope of this paper. }
+  %\comment[FL]{j'ai pas compris pourquoi la phrase du reviewer avait été mise en commentaire, j'ai remis}
+ %\comment[JR]{I rather agree that it is quite reductionist, and that the discussion may be valid only at very abstract levels (on which we were not explicit maybe ?) - maybe make these conclusions more moderate} \comment[MLT]{I kind of disagree with the idea that it is straightforward that centralised cities produce more segregation as it is not a direct parameter of the model but an output. Plus: what argument would he or she have to state that a big center would be automatically less segregated that several smaller ones? And I believe that explaining why polycentric cities are more segregated than others is out of the scope of the paper. But we could add his or her comment in the discussion section, saying that we hove we have convinced people to add spatial sensitivity analysis during the exploration of their model and that specialist of the thematics would see the opportunity to dig deeper into our results?} \comment[FK]{du coup je fais une proposition de réponse ci-dessous en reprenant ces différents éléments}
+  We understand this statement, however we wish to underline that our objective in the discussion of the Schelling results was not to establish a general result on the links between polycentricity and segregation, which are indeed very complex and multidimensional as advocated by the reviewer. Instead, we aimed at showing what kind of results could be obtained using the framework we suggest. If we do not prove that in general, and in empirical context, polycentricity creates more segregation, we obtained, in the modelling context, under Schelling assumptions, that polycentric geometric structures are more often that not associated with segregated patterns, a result which we do not believe to be solely resulting from the fact that more centers leads to more opportunities of segregation (which is true), because it seems also true that monocentric structures, with higher densities, can more easily accommodate heterogeneity of agents within cells, and hence a more patchy type of segregation which can for instance being observed in London. We included a comment in the discussion section, saying that we hope we have convinced people to add spatial sensitivity analysis during the exploration of their model and that specialist of the thematics would see the opportunity to dig deeper into our results? \comment[FL]{à la relecture de l'article s'assurer que cette prise de recul est bien explicitée}
   
-  \item \comment[FL]{ne pas oublier les trois points ci-dessous!!!}
+  \comment[FL]{ne pas oublier les trois points ci-dessous!!!}
   \item in discussion, say that indeed the indicators can themselves be influenced by geometric structures (cf. comment B) but on the processes, there is nothing obvious about the influence of structures on behavioural spatial patterns (if you imagine a model with no interactions between agents for example) + it's a difference between the model and its potential addition to the real systems. cf. B
   
   \item rewrite 1.11 \& 1.12 which is misleading
@@ -229,39 +229,38 @@ B. To highlight limitations as well as promising perspectives of improvement, we
 
   \item \textit{While the different outcomes of the two implementation exercises are not the main point, I would suggest authors to provide some more elaborated explanations. The two models have different behavioural assumptions and represent a different 'interaction' context. How can be extrapolate and isolate spatial effects when models have different logics and theoretical purposes?}
   
-  $\rightarrow$ see above comment A, discussion has been amended and details added.
+  $\rightarrow$ See above comment A, discussion has been amended and details added.
   \medskip
 
   \item \textit{In 4.1, the authors suggest potential developments and point to certain limitations. While limitations are well-discussed, readers who are not specialist of spatial models could benefit from a more comprehensive discussion on potential applications and extensions.}
   
-  $\rightarrow$ see comment B
+  $\rightarrow$ See comment B above.
   
   \medskip
   
   \textit{For instance, it would be useful to have suggestions on how to use this methodology to run empirical models. Suppose to have a nice dataset and a case of a urban context to be modelled. Could the exploration of different spatial configurations even be used to run 'counter-factual' or 'what if' tests on actual spatial configurations?}
   
-  $\rightarrow$ cf. comment B.3
+  $\rightarrow$ This point was not explicit enough and we revised the presentation of our approach (which is generic and not empirical) in introduction (especially fig. 1), as already stated in comment B.3 above. We thank reviewer 2 for highlighting this limitation.
   % \item \comment[JR]{this is a relevant remark but far beyond the scope of the paper, as an extension of what we did but with perturbation of real datasets / sensitivity to noise - Julien wanted to begin working on that actually and it should be integrated into spatialdata at some point - we also are supposed to implement such a perturbator to test the 4city model}
-  it as not explicit enough and we revised the presentation of our approach (which is generic and not empirical) in intro (especially fig. 1). We thank reviewer 2 for highlighting this limitation.
+  
 
   \medskip
 
   \item \textit{Furthermore, there are now examples of spatial models that go beyond administrative neighborhoods and overimposed spatial boundaries, i.e., egohoods (e.g., https://onlinelibrary.wiley.com/doi/abs/10.1111/1745-9125.12006), which could be interesting to see implemented in ABM.}
   
-  $\rightarrow$ we added a paragraph on the limits of our density grid approach in discussion, in which we mention the possibility to use egohoods to better measure segregation.
+  $\rightarrow$ We added a paragraph on the limits of our density grid approach in discussion, in which we mention the possibility to use egohoods to better measure segregation.
   
   \medskip
   
-  %Spatial econometrics based on empirical dataset is developing fast. It would be useful to understand how these models can enrich ABM and vice-versa. 
-   \item this is very interesting to inform the interactions between empirics, concepts and models as discussed by Livet et al., 2010. We need to add a paragraph about this discussion in conclusion and how our approach allows to go back to questioning empirical cases from the model and questioning our concepts ('neighbourhood'). 
+   \item \textit{Spatial econometrics based on empirical dataset is developing fast. It would be useful to understand how these models can enrich ABM and vice-versa.}
    
-   $\rightarrow$  cf. comment B
+     $\rightarrow$ This points suggest that our work can inform the interactions between empirics, concepts and models as discussed by Livet et al., 2010. We added a paragraph on this in the discussion discussion, and suggested how our approach allows to go back to questioning empirical cases from the model and questioning our concepts ('neighbourhood').
 
   \medskip
 
   \item\textit{Furthermore, even among limitations, perhaps authors could discuss data limitations and the fact that social processes (networks, mobility) cannot conflate with spatial dynamics. Here, it is a bit misleading to call "generator parameters" ONLY the spatial ones!}
   
-  $\rightarrow$ we have clarified this issue in introduction but referring to different terms and figure 1 which differentiates between the mu model and gama parameters. (see comment A)
+  $\rightarrow$ We have clarified this issue in introduction but referring to different terms and figure 1 which differentiates between the $\mu$ model and $\gamma$ parameters (see comment A).
  
  \medskip
  
@@ -269,7 +268,7 @@ B. To highlight limitations as well as promising perspectives of improvement, we
   \item\textit{In this respect, I would encourage authors to further develop their closing section, which now does not stimulate readers to imagine implications of authors' findings and message to their own research.} \ldots
   %I would expand this section to provide a more detailed discussion on implications for model makers, experts on social geography and urban scholars who work with ABM, non-specialist in geography who would like to base their models in more proper geographical constraints. And perhaps, authors could suggest future line of research that could show-case their argument. 
   
-  $\rightarrow$ cf. new discussion/conclusion and comment B
+  $\rightarrow$ The discussion and conclusion was amended in this direction (see comment B).
 
 %I appreciate that models are fully available to readers. 
 %\item We do too!
